# Gameboy-Emulator

./: .gitignore  Cargo.toml  dev_resources.txt
Dev Resources/: dev_resources.txt
src/: gui.rs  main.rs
src/cpu/: cpu.rs  mod.rs  opcodes.rs  registers.rs
src/drivers/: display.rs
src/drivers/display/: errors.rs  mod.rs
src/emulator/: cartridge.rs  debug.rs  debugger.rs  errors.rs  memory.rs  mod.rs  ppu.rs  rom.rs
src/emulator/cpu/: mod.rs  opcodes.rs  registers.rs  state.rs
src/emulator/memory/: mod.rs
src/emulator/rom/: mod.rs
src/emulator/test/: mod.rs
src/gui/: mod.rs
src/gui/components/: emu_screen.rs  memory_editor.rs  mod.rs
src/test/: test.txt
src/utils/: bit_ops.rs  mod.rs
tests/: 00.json  01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  0a.json  0b.json  0c.json  0d.json  0e.json  0f.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  1a.json  1b.json  1c.json  1d.json  1e.json  1f.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  (+200 more)
