[package]
name = "gameboy-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
egui = "0.31.1"
eframe = "0.31.1"
rfd = "0.15.3"
chrono = "0.4.38"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
